--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "push":"git push MeCat arya",
+    "commit": "git commit -m \"arya commit\"",
     "build": "vite build",
     "preview": "vite preview",
     "host": "vite --host"
